--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
-    <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}projects">Projects</a></li>
-    <li class="nav-projects" role="menuitem"><a href="{{site.baseurl}}people">People</a></li>
-    <li class="nav-publications" role="menuitem"><a href="{{site.baseurl}}tag/publication/">Publications</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
+    <li class="nav-home" role="menuitem"><a href="{{"/" | relative_url}}">Home</a></li>
+    <li class="nav-projects" role="menuitem"><a href="{{"/" | relative_url}}projects">Projects</a></li>
+    <li class="nav-projects" role="menuitem"><a href="{{"/" | relative_url}}people">People</a></li>
+    <li class="nav-publications" role="menuitem"><a href="{{"/" | relative_url}}tag/publication/">Publications</a></li>
+    <li class="nav-about" role="menuitem"><a href="{{"/" | relative_url}}about/">About</a></li>
 </ul>
