--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,6 @@
     <li class="nav-home" role="menuitem"><a href="{{'/' | relative_url}}">Home</a></li>
     <li class="nav-projects" role="menuitem"><a href="{{'/' | relative_url}}projects">Projects</a></li>
     <li class="nav-projects" role="menuitem"><a href="{{'/' | relative_url}}people">People</a></li>
-    <li class="nav-publications" role="menuitem"><a href="{{'/' | relative_url}}tag/publication/">Publications</a></li>
+    <li class="nav-publications" role="menuitem"><a href="{{'/' | relative_url}}publications/">Publications</a></li>
     <li class="nav-about" role="menuitem"><a href="{{'/' | relative_url}}about/">About</a></li>
 </ul>
