--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,5 +65,6 @@
     });
     </script> -->
 
+    <meta name="google-site-verification" content="4miSZM2FPJNtYf6CmAEOD309Oz9FvxOXkTfJhDeuZmM" />
     <meta name="generator" content="Jekyll 3.6.2" />
     <link rel="alternate" type="application/rss+xml" title="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" href="{{ '/' | relative_url }}feed.xml" />
